--- a/templates/login.html
+++ b/templates/login.html
@@ -2,9 +2,11 @@
 {% block title %}로그인{% endblock %}
 {% block content %}
 <h2>로그인</h2>
+<!-- 로그인 -->
 <form method="POST">
     아이디: <input type="text" name="username"><br>
     비밀번호: <input type="password" name="password"><br>
-    <button type="submit">로그인</button>
+    <button type="submit" class="btn-login">로그인</button>
 </form>
+
 {% endblock %}
