--- a/templates/register.html
+++ b/templates/register.html
@@ -5,6 +5,6 @@
 <form method="POST">
     아이디: <input type="text" name="username"><br>
     비밀번호: <input type="password" name="password"><br>
-    <button type="submit">회원가입</button>
+    <button type="submit" class="btn-signup">회원가입</button>
 </form>
 {% endblock %}
