--- a/templates/ledger.html
+++ b/templates/ledger.html
@@ -12,7 +12,7 @@
             <p>승증: {{ ledger.seungjung }}장</p>
             <p>크리: {{ ledger.kuri }}장</p>
             <p>샤프: {{ ledger.sharp }}장</p>
-            <p>기타사항: {{ ledger.etc }}</p>
+            <p>{{ ledger.etc }}</p>
             <hr>
             <p>국가잔고: {{ ledger.nation_balance }}</p>
             <p>비코: {{ ledger.bico }}</p>
